2012-08-07  Kai Tietz  <ktietz@redhat.com>

	* secapi/_gmtime64_s.c: New file.
	* secapi/_gmtime32_s.c: New file.
	* secapi/_localtime32_s.c: New file.
	* secapi/_localtime64_s.c: New file.
	* secapi/_ctime64_s.c: New file.
	* secapi/_wctime64_s.c: New file.
	* Makefile.am: Add new files.
	* Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbols.
	* lib64/msvcrt.def: Likewise.

2012-08-03  Kai Tietz  <ktietz@redhat.com>

	* secapi/asctime_s.c: New file.
	* secapi/_wasctime_s.c: New file.
	* secapi/_wctime32_s.c: New file.
	* secapi/_ctime32_s.c: New file.
	* Makefile.am: Add new files.
        * Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbols.
	* lib64/msvcrt.def: Likewise.

2012-08-01  Kai Tietz  <ktietz@redhat.com>

	* secapi/_umask_s.c: New file.
	* secapi/_chsize_s.c: New file.
	* secapi/_mktemp_s.c: New file.
	* secapi/_wmktemp_s.c: New file.
	* secapi/_wassert_s.c: New file.
	* secapi/_assert_s.c: New file.
	* secapi/_cwprintf_s.c: New file.
	* secapi/_cwprintf_s_l.c: New file.
	* secapi/_vcwprintf_s.c: New file.
	* secapi/_vcwprintf_s_l.c: New file.
	* secapi/_vcprintf_s.c: New file.
	* secapi/_vcprintf_s_l.c: New file.
	* secapi/_cprintf_s_l.c: New file.
	* Makefile.am: Add new file.
	* Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbol.
	* lib64/msvcrt.def: Likewise.

2012-07-31  Kai Tietz  <ktietz@redhat.com>

	* secapi/: New folder.
	* Makefile.am: Add _cgets_s.c _cgetwe_s.c and _cprintf_s.c files
	to libmingwex.a library.
	* Makefile.in: Regnerated.
	* lib32/msvcrt.def: Comment replaced secured-API functions.
	* lib64/msvcrt.def: Likewise.

2012-07-17  Kai Tietz  <ktietz@redhat.com>

	PR 3544372
	* misc/mingw_pformat.h (PFORMAT_TO_FILE): Increased constant.
	(PFORMAT_NOLIMIT): Likewise.

2012-07-11  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/tapi32.def: Add missing exports.

2012-07-10  Ozkan Sezer  <sezeroz@gmail.com>

	* crt/tlsmthread.c: Removed leftovers of Win9X/Me mingwm10.dll
	support.
