@@ -18,8 +18,8 @@ extern "C" {
   errno_t __cdecl _gmtime32_s (struct tm *_Tm,const __time32_t *_Time);
   errno_t __cdecl _localtime32_s (struct tm *_Tm,const __time32_t *_Time);
   errno_t __cdecl asctime_s (char *_Buf,size_t _SizeInWords,const struct tm *_Tm);
-  _CRTIMP errno_t __cdecl _strdate_s(char *_Buf,size_t _SizeInBytes);
-  _CRTIMP errno_t __cdecl _strtime_s(char *_Buf ,size_t _SizeInBytes);
+  errno_t __cdecl _strdate_s (char *_Buf,size_t _SizeInBytes);
+  errno_t __cdecl _strtime_s (char *_Buf ,size_t _SizeInBytes);
   errno_t __cdecl _ctime64_s (char *_Buf,size_t _SizeInBytes,const __time64_t *_Time);
   errno_t __cdecl _gmtime64_s (struct tm *_Tm,const __time64_t *_Time);
   errno_t __cdecl _localtime64_s (struct tm *_Tm,const __time64_t *_Time);
@@ -28,8 +28,8 @@ extern "C" {
 #define _WTIME_S_DEFINED
   errno_t __cdecl _wasctime_s (wchar_t *_Buf,size_t _SizeInWords,const struct tm *_Tm);
   errno_t __cdecl _wctime32_s (wchar_t *_Buf,size_t _SizeInWords,const __time32_t *_Time);
-  _CRTIMP errno_t __cdecl _wstrdate_s(wchar_t *_Buf,size_t _SizeInWords);
-  _CRTIMP errno_t __cdecl _wstrtime_s(wchar_t *_Buf,size_t _SizeInWords);
+  errno_t __cdecl _wstrdate_s (wchar_t *_Buf,size_t _SizeInWords);
+  errno_t __cdecl _wstrtime_s (wchar_t *_Buf,size_t _SizeInWords);
   errno_t __cdecl _wctime64_s (wchar_t *_Buf,size_t _SizeInWords,const __time64_t *_Time);
 
 #if !defined (RC_INVOKED) && !defined (_INC_WTIME_S_INL)
